force-app/main/default/objects/Visit_Plan__c/Visit_Plan__c.object-meta.xml
<CustomObject>
    <label>Visit Plan</label>
    <nameField>
        <displayFormat>VP-{00000000}</displayFormat>
        <label>Visit Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>