force-app/main/default/objects/Visit_Plan__c/fields/Check_In_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Date_Time__c</fullName>
    <label>Check In Date Time</label>
    <type>DateTime</type>
</CustomField>