force-app/main/default/objects/Visit_Plan__c/fields/Check_In_Location__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Location__c</fullName>
    <label>Check In Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>