force-app/main/default/objects/Visit_Plan__c/fields/Check_Out_Comments__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Comments__c</fullName>
    <label>Check Out Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>