force-app/main/default/objects/Visit_Plan__c/fields/Check_Out_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Date_Time__c</fullName>
    <label>Check Out Date Time</label>
    <type>DateTime</type>
</CustomField>