force-app/main/default/objects/Visit_Plan__c/fields/Reason_For_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Visit__c</fullName>
    <label>Reason For Visit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>