force-app/main/default/objects/Visit_Plan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
	AND	(
			ISBLANK(Check_In_Date_Time__c),
			ISBLANK(Check_Out_Date_Time__c),
                        Visit_Date__c &gt;= TODAY()

	),
	&#39;Planned&#39;,
	IF	(
			AND	(
					NOT(ISBLANK(Check_In_Date_Time__c)),
					ISBLANK(Check_Out_Date_Time__c)
			),
			&#39;Checked In&#39;,
			
			IF(
				AND(
							NOT(ISBLANK(Check_In_Date_Time__c)),
							NOT(ISBLANK(Check_Out_Date_Time__c))
				),
				&#39;Checked Out&#39;,
					
				IF(
					AND(
						ISBLANK(Check_In_Date_Time__c),
						ISBLANK(Check_Out_Date_Time__c),
						Visit_Date__c &lt;= TODAY()
					),
					&#39;Missed&#39;,
&#39;&#39;					
					
				)
			)
	
	)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>