force-app/main/default/objects/Visit_Plan__c/fields/Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date__c</fullName>
    <label>Visit Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>