force-app/main/default/objects/Visit_Plan__c/fields/Visit_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Visit_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Plans</relationshipLabel>
    <relationshipName>Visit_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>