force-app/main/default/objects/Visit_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Visit_Date__c</columns>
    <columns>Visit_To_Account__c</columns>
    <columns>Visit_To_Lead__c</columns>
    <columns>Visit_To_Contact__c</columns>
    <columns>Reason_For_Visit__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>