force-app/main/default/objects/Visit_Plan__c/listViews/All_Planed_Visit.listView-meta.xml
<ListView>
    <fullName>All_Planed_Visit</fullName>
    <columns>NAME</columns>
    <columns>Visit_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Visit_To_Lead__c</columns>
    <columns>Visit_To_Contact__c</columns>
    <columns>Visit_To_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Planned</value>
    </filters>
    <label>All Planned Visit Plans</label>
</ListView>