force-app/main/default/objects/Visit_Plan__c/listViews/Today_s_Visit_Plans.listView-meta.xml
<ListView>
    <fullName>Today_s_Visit_Plans</fullName>
    <columns>NAME</columns>
    <columns>Visit_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Visit_To_Lead__c</columns>
    <columns>Visit_To_Contact__c</columns>
    <columns>Visit_To_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visit_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&#39;s Visit Plans</label>
</ListView>